--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,17 +7,20 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Experience
+    url: '#experience'
     weight: 20
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+  # - name: Talks
+  #   url: '#talks'
+  #   weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
+    weight: 40
+  - name: Achievements
+    url: '#achievements'
     weight: 50
   - name: Contact
     url: '#contact'
